--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
 /* BOOTSTRAP 3.x GLOBAL STYLES
 -------------------------------------------------- */
 body {
-  padding-bottom: 40px;
+  padding-bottom: 00px;
   color: #5a5a5a;
+  background-color: #ecf0f1;
 }
 
-
+footer{
+  padding-top: 40px;
+  padding-bottom: 0px;
+}
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
@@ -17,35 +21,49 @@ body {
   left: 0;
   right: 0;
   z-index: 10;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  color: #ecf0f1;
 }
-
-
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
-/* Carousel base class */
-.carousel {
-  margin-bottom: 60px;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 1;
-}
+.jumbotron {
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
+  color: #ecf0f1;
+  text-align: center;
+  vertical-align: middle;
+  margin-bottom: 40px;
+  height: 1000px;
+  background-image: url(../img/hero.jpg);
+  background-position: 0% 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;}
 
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 600px;
-  background-color:#555;
-}
-.carousel img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-height: 600px;
-}
+  .jumbotron h1{
+    margin-top: 300px;
+    font-size: 300px;
+    line-height: 200px;
+  }
 
+  .jumbotron h2{
+    font-size: 50px;
+    letter-spacing: 2px;
+    margin-bottom: 5px;
+  }
 
+  .jumbotron h3{
+    margin-top: 0px;
+    font-size: 35px;
+    letter-spacing: 12px;
+  }
+
+  .jumbotron .row{
+    margin-top: 100px;
+  }
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
@@ -100,6 +118,104 @@ body {
   letter-spacing: -1px;
 }
 
+/* FLAT PRICING
+-------------------------------------------------- */
+.flat {
+  margin-top: 100px;
+}
+.flat .plan {
+    border-radius: 6px;
+    list-style: none;
+    padding: 0 0 20px;
+    margin: 0 0 15px;
+    background: #bdc3c7;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    transition: all 0.2s ease-in-out;
+    color: #2c3e50;
+}
+
+.flat .plan:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.flat .plan li {
+    padding: 10px 15px;
+    color: #2c3e50;
+    border-top: 1px solid #f5f5f5;
+    -webkit-transition: 300ms;
+    transition: 300ms;
+}
+
+.flat .plan li.plan-price {
+    border-top: 0;
+}
+
+.flat .plan li.plan-name {
+    border-radius: 6px 6px 0 0;
+    padding: 15px;
+    font-size: 24px;
+    line-height: 24px;
+    color: #fff;
+    background: #34495e;
+    margin-bottom: 30px;
+    border-top: 0;
+}
+
+.flat .plan li>strong {
+  font-size: 25px;
+    color: #3498db;
+}
+
+.flat .plan li.plan-action {
+    margin-top: 10px;
+    border-top: 0;
+}
+
+.flat .plan.featured {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.flat .plan.featured li.plan-name {
+    background: #000;
+}
+
+.flat .plan.featured:hover li.plan-name {
+    background: #c0392b;
+}
+
+.flat .plan:hover li.plan-name {
+    background: #1abc9c;
+}
+
+
+/* ASIDE
+------------------------------------------------- */
+.details {
+  margin-top: 50px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  color: #ecf0f1;
+  background-color: #7f8c8d;
+  vertical-align: middle;
+
+}
+
+.details a{
+  font-weight: 700;
+  color:#f1c40f;
+}
+
+.details .col-md-7 a{
+  color:#fff;
+  font-weight: 400;
+
+}
 
 
 /* RESPONSIVE CSS
